--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#ff6b35" />
-    
-    <!-- Primary Meta Tags -->
-    <title>Mente's Delivery | Fast & Fresh Food at Your Doorstep</title>
-    <meta name="title" content="Mente's Delivery | Fast & Fresh Food at Your Doorstep" />
-    <meta name="description" content="Order delicious food from your favorite restaurants with Mente's Delivery. Fast, reliable, and fresh food delivered right to your door. Browse our diverse menu today!" />
-    <meta name="keywords" content="food delivery, Mente's Delivery, online food ordering, fast delivery, restaurants, order food, meal delivery, local food" />
-    <meta name="author" content="Mente's Delivery" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://food-del-mentes.vercel.app/" />
-    <meta property="og:title" content="Mente's Delivery | Fast & Fresh Food at Your Doorstep" />
-    <meta property="og:description" content="Order delicious food from your favorite restaurants with Mente's Delivery. Fast, reliable, and fresh food delivered right to your door." />
-    <meta property="og:image" content="/header_img.png" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#ff6b35" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://food-del-mentes.vercel.app/" />
-    <meta property="twitter:title" content="Mente's Delivery | Fast & Fresh Food at Your Doorstep" />
-    <meta property="twitter:description" content="Order delicious food from your favorite restaurants with Mente's Delivery. Fast, reliable, and fresh food delivered right to your door." />
-    <meta property="twitter:image" content="/header_img.png" />
+  <!-- Primary Meta Tags -->
+  <title>Bini's Delivery | Fast & Fresh Food at Your Doorstep</title>
+  <meta name="title" content="Bini's Delivery | Fast & Fresh Food at Your Doorstep" />
+  <meta name="description"
+    content="Order delicious food from your favorite restaurants with Bini's Delivery. Fast, reliable, and fresh food delivered right to your door. Browse our diverse menu today!" />
+  <meta name="keywords"
+    content="food delivery, Bini's Delivery, online food ordering, fast delivery, restaurants, order food, meal delivery, local food" />
+  <meta name="author" content="Bini's Delivery" />
 
-    <!-- Canonical Tag -->
-    <link rel="canonical" href="https://food-del-mentes.vercel.app/" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://food-del-mentes.vercel.app/" />
+  <meta property="og:title" content="Bini's Delivery | Fast & Fresh Food at Your Doorstep" />
+  <meta property="og:description"
+    content="Order delicious food from your favorite restaurants with Mente's Delivery. Fast, reliable, and fresh food delivered right to your door." />
+  <meta property="og:image" content="/header_img.png" />
 
-    <!-- Preconnect to Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://food-del-mentes.vercel.app/" />
+  <meta property="twitter:title" content="Mente's Delivery | Fast & Fresh Food at Your Doorstep" />
+  <meta property="twitter:description"
+    content="Order delicious food from your favorite restaurants with Mente's Delivery. Fast, reliable, and fresh food delivered right to your door." />
+  <meta property="twitter:image" content="/header_img.png" />
 
-    <!-- Structured Data (JSON-LD) -->
-    <script type="application/ld+json">
+  <!-- Canonical Tag -->
+  <link rel="canonical" href="https://food-del-mentes.vercel.app/" />
+
+  <!-- Preconnect to Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "FoodDeliveryService",
@@ -50,11 +55,13 @@
       }
     }
     </script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-    
-    <!-- Non-critical Styles or Scripts can go here -->
-  </body>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+
+  <!-- Non-critical Styles or Scripts can go here -->
+</body>
+
 </html>
